<resources>
    <string name="app_name">Linked Photo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup_button">Sign Up</string>
    <string name="sign_in_our_sign_up">"Log In or Sign Up! "</string>
    <!--EditActivity-->
    <string name="toggle_open" translatable="false">Open </string>
    <string name="toggle_close" translatable="false">Close </string>
    <string name="bbbhbh">bbbhbh</string>
    <!--PostAdapter-->
    <string name="delte_message">Delete this  photo?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!--ChooseImageActivity-->
    <string name="image3">Photo 3</string>
    <!--MainActivity-->
    <string name="ok" translatable="false">OK</string>
    <string name="email_not_verified">You have not verified your account - check you email and to verify your email address! And Sign in again.</string>
    <string name="email_verified_send">Check you email and follow link in message to verify your email address! And Sign in again.</string>
    <string name="delte_title">Delete post</string>
    <string name="image2">Photo 2</string>
    <string name="edit_ac_Title">*Title</string>
    <string name="sign_in">Log In</string>
    <string name="sing_out">Log Out</string>
    <string name="account">Account</string>
    <string name="signin_button">Log I</string>
    <string name="alert">Attention!</string>
    <string name="sing_up">Sign Up</string>
    <string name="my_files">My files</string>
    <string name="item_deleted">Item is deleted!</string>
    <string name="main_image">Photo 1</string>
    <string name="google_sing_up">" Google Sign Up"</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="send_email_again">Send again!</string>
    <string name="sign_link_message">You already have account , please log into your account to register this email address!</string>
    <string name="account_linked">You attached your email adress in your account !</string>
    <string name="forget_password">Are you forget password?</string>
    <string name="send_recet_password">Send</string>
    <string name="forget_password_message">To restore, please enter your  email address</string>
    <string name="email_is_empty">You have not specified your email!</string>
    <string name="email_is_send">Recovery instructions have been sent to your email!</string>
    <string name="images_loading">Please wait, images loading...</string>
    <string name="different">Different</string>
    <string name="more">load more...</string>
    <string name="host">Visitor</string>
    <string name="all">All Photos</string>
    <string name="my_favs">Liked</string>
    <string name="select_country">*Select country</string>
    <string name="select_city">*Select city</string>
    <string name="no_result">No Result</string>
    <string name="banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="country_notSelected">Сountry not selected!</string>
    <string name="empty_field_error">Attention! All fields with * need fill!</string>
    <!--TODO Filter Activity-->
    <string name="select_filter_country">Choice country for filter:</string>
    <string name="select_filter_city">Choice city for filter:</string>
    <string name="use_filter">Use filter</string>
    <string name="cancel_use_filter">Cancel filter</string>
    <string name="select_country_f_title">Select country</string>
    <string name="select_city_f_title">Select city</string>
    <string name="login">Login</string>
    <string name="choose_login">Choose login and image</string>
    <string name="admin">Admin</string>
    <string name="moderation">Moderation</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="delete">Delete</string>
    <string name="empty">Empty</string>
    <string name="county">Country:</string>
    <string name="city">City:</string>
    <string name="my_followers">My followers</string>
    <string name="my_subscriptions">My subscriptions</string>
    <string name="add_subscrip">Do you want to subscribe to this user?</string>
    <string name="remove_subscrip">Do you want to remove this user?</string>
    <string name="aboutMe">About me</string>
    <string name="saveChange">Save</string>
    <string name="remove_ads">Remove ad</string>
    <string name="hidden">***</string>
    <string name="post_moderation">Post on moderation!</string>
    <string name="waiting" translatable="false">waiting</string>
</resources>
