<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/admin"
        android:id="@+id/adminCatID">
        <menu>
            <item android:title="@string/moderation"
                android:id="@+id/id_admin"
                android:icon="@drawable/ic_sing_up"/>
        </menu>
    </item>
    <group android:checkableBehavior="single">
        <item android:title="@string/my_files"
            android:id="@+id/id_my_files"
            android:icon="@drawable/ic_my_files"/>
        <item
            android:id="@+id/id_fav"
            android:icon="@drawable/ic_fav_selected"
            android:title="@string/my_favs" />
        <item
            android:id="@+id/id_all_files"
            android:icon="@drawable/ic_my_files"
            android:title="@string/all" />
    </group>
    <item android:title="@string/account"
        android:id="@+id/accountCatId">

<menu>
    <item android:title="@string/sing_up"
        android:id="@+id/id_sing_up"
        android:icon="@drawable/ic_sing_up"/>
    <item android:title="@string/sign_in"
        android:id="@+id/id_sing_in"
        android:icon="@drawable/ic_sing_in"/>
    <item android:title="@string/sing_out"
        android:id="@+id/id_sing_out"
        android:icon="@drawable/ic_sing_out"/>
</menu>
    </item>

</menu>