<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/placeHolderForChange"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_dark1"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".userActivity">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="110dp"
            android:layout_height="114dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageLogo"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/loginName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="@string/login"
                android:textColor="@color/green" />

            <EditText
                android:id="@+id/login"
                android:layout_width="81dp"
                android:layout_height="match_parent"
                android:inputType="textMultiLine|textPersonName"
                android:text="G"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/DiscText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:text="@string/aboutMe"
                android:textColor="@color/green" />

            <EditText
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_margin="5dp"
            android:backgroundTint="@color/green"
            android:text="@string/saveChange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>